--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -84,7 +84,7 @@
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Facebook</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Twitter</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Instagram</th>
-                                <th class="text-center text-uppercase text-xxs font-weight-bolder">Action</th>
+                                <th class="text-center text-uppercase text-xxs font-weight-bolder" style="width: 15%;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
