--- a/kawn_subscriptions_manager/templates/partials/navbar.html
+++ b/kawn_subscriptions_manager/templates/partials/navbar.html
@@ -28,8 +28,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="nav-item px-3 d-flex align-items-center"></li>
-                <li class="nav-item dropdown pe-2 d-flex align-items-center">
+                <li class="nav-item dropdown px-3 d-flex align-items-center">
                     {% if bell != 0 %}
                     <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa fa-bell text-danger cursor-pointer"></i>
