--- a/kawn_subscriptions_manager/templates/subscriptions/form_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/form_subscription.html
@@ -54,15 +54,15 @@
 <script type="text/javascript">
   let data = JSON.parse("{{subscriptionplan|escapejs}}");
 
-  if(document.getElementById("id_subscription_form-subscriptionplan")){
-    document.getElementById("id_subscription_form-subscriptionplan").onchange = (e) => {
+  if(document.getElementById("id_add_subscription_form-subscriptionplan")){
+    document.getElementById("id_add_subscription_form-subscriptionplan").onchange = (e) => {
         let subscriptionplan = data.find(dataSubplan => dataSubplan.id == e.target.value);
-        $('#id_billing_form-price').val(subscriptionplan.price)
+        $('#id_add_billing_form-price').val(subscriptionplan.price)
     };
   } else {
     document.getElementById("id_activate_subscription_form-subscriptionplan").onchange = (e) => {
         let subscriptionplan = data.find(dataSubplan => dataSubplan.id == e.target.value);
-        $('#id_billing_form-price').val(subscriptionplan.price)
+        $('#id_activate_billing_form-price').val(subscriptionplan.price)
     };
   }
 
