--- a/kawn_subscriptions_manager/templates/clients/list_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet.html
@@ -5,7 +5,6 @@
 {% load static %}
 {% load static i18n compress%}
 {% load django_tables2 %}
-{% load bootstrap_pagination %}
 {% load crispy_forms_tags %}
 
 {% block breadcrumbs %}
@@ -84,6 +83,7 @@
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 20%;">Address</th>
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 10%;">City</th>
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 10%;">Province</th>
+                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Sales</th>
                 <th class="text-center text-uppercase text-xxs text-dark font-weight-bolder">Action</th>
               </tr>
             </thead>
