--- a/kawn_subscriptions_manager/templates/dashboard/dashboard_logs_created.html
+++ b/kawn_subscriptions_manager/templates/dashboard/dashboard_logs_created.html
@@ -113,10 +113,8 @@
                 <h6 class="font-weight-bolder">Subscriptions Logs
                     <span class="badge badge-sm bg-gradient-success">Created</span>
                 </h6>
-                <div class="row d-inline">
-                    <a href="/" class="btn btn-sm bg-gradient-success col-4 mt-2 mb-1">Created</a>
-                    <a href="{{ 'home2' }}" class="btn btn-sm bg-gradient-warning col-4 mt-2 mb-1">Modified</a>
-                </div>
+                <a href="/" class="btn btn-sm btn-outline-success col-md-3 mt-2 mb-1">Created</a>
+                <a href="{% url 'home' %}" class="btn btn-sm btn-outline-warning col-md-3 mt-2 mb-1">Modified</a>
                 <!-- <p class="text-sm">
                     <i class="fa fa-arrow-up text-success" aria-hidden="true"></i>
                     <span class="font-weight-bold">24%</span> this month
