--- a/kawn_subscriptions_manager/templates/users/profile.html
+++ b/kawn_subscriptions_manager/templates/users/profile.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
+
 {% block title %}Users{% endblock title %}
 {% block profile-active %}active{% endblock %}
 
+{% load static %}
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
@@ -16,10 +18,7 @@
 <div class="row">
     <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
             <div class="card mb-4">
-                <div class="card-header pb-0 justify-content-lg-between">
-                    <h5 class="font-weight-bolder">My Profile</h5><br>
-                </div>
-                <div class="card-body p-3 mb-xl-12">
+                <div class="card-body p-3 mb-xl-2">
                     {% for message in messages %}
                     <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
                         <strong class="text-white">{{ message }}</strong>
@@ -28,36 +27,59 @@
                         </button>
                     </div>
                     {% endfor %}
-                    <table class="table mb-0">
-                        <thead>
-                            <tr class="text-center">
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Username</th>
-                                <th>Access</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="text-center">
-                                <td>{{ user.name }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>{{ user.username }}</td>
-                                <td>{{ user.type }}</td>
-                                <td>
-                                    <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">My Info</a>
-                                    <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">E-Mail Settings</a>
-                                    <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}" role="button">Change Password</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    
+                    <div class="page-header min-height-300 border-radius-xl">
+                        <span class="mask bg-gradient-faded-info opacity-6">
+                            <h4 class="text-white font-weight-bolder mt-4 ps-4">My Profile</h4>
+                        </span>
+                    </div>
+                    <div class="card card-body blur shadow-blur mx-4 mt-n6 overflow-hidden">
+                        <div class="row gx-4">
+                            <div class="col-auto my-auto">
+                                <div class="h-100">
+                                    <h5 class="mb-1">
+                                        {{ user.name }} / {{ user.username }}
+                                    </h5>
+                                    <p class="mb-0 font-weight-bold text-sm">
+                                        Email: {{ user.email }}
+                                    </p>
+                                    <p class="mb-0 font-weight-bold text-sm">
+                                        Access: {{ user.type }}
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
+                                <div class="nav-wrapper">
+                                    <ul class="nav nav-pills nav-fill p-1 bg-transparent" role="tablist">
+                                        <li class="nav-item">
+                                            <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">
+                                                <span class="ms-1">My Info
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">
+                                                <span class="ms-1">E-Mail Settings
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}"
+                                                role="button">
+                                                <span class="ms-1">Change Password
+                                                </span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 {% endblock content %}
 
 {% block inline_javascript %}
