--- a/kawn_subscriptions_manager/templates/users/user_detail.html
+++ b/kawn_subscriptions_manager/templates/users/user_detail.html
@@ -52,19 +52,19 @@
                                 <div class="nav-wrapper">
                                     <ul class="nav nav-pills nav-fill p-1 bg-transparent" role="tablist">
                                         <li class="nav-item">
-                                            <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">
+                                            <a class="btn btn-info bg-gradient-info mt-2" href="{% url 'users:update' %}" role="button">
                                                 <span class="ms-1">My Info
                                                 </span>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">
+                                            <a class="btn btn-info bg-gradient-info mt-2" href="{% url 'account_email' %}" role="button">
                                                 <span class="ms-1">E-Mail Settings
                                                 </span>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}"
+                                            <a class="btn btn-info bg-gradient-info mt-2" href="{% url 'account_change_password' %}"
                                                 role="button">
                                                 <span class="ms-1">Change Password
                                                 </span>
